<resources>
    <string name="app_name">Staff</string>
    <string name="loading">Loading…</string>
    <string name="Login">đăng nhập</string>
    <string name="Create_new">Tạo mới</string>
    <string name="New_workspace">Tạo Workspace</string>
    <string name="Company">"  Tên Công Ty"</string>
    <string name="Address">"  Địa chỉ"</string>
    <string name="Email">"  Email"</string>
    <string name="Phone">"  Điện thoại"</string>
    <string name="Number_of_employees">"  Số lượng nhân viên"</string>
    <string name="picture">Picture</string>
    <string name="Add_new_staff">  Thêm nhân sự mới</string>
    <string name="Edit_info">Chỉnh sửa thông tin</string>
    <string name="First_last_name">  Họ và tên</string>
    <string name="Email_staff">  Email</string>
    <string name="Position">  Chức vụ</string>
    <string name="part">  Bộ phận</string>
    <string name="phone_number_staff">Số điện thoại</string>
    <string name="edit_workspace">Edit Workspace</string>
    <string name="update">Cập nhật</string>
    <string name="add">Add +</string>
    <string name="members">Members</string>
    <string name="title">Test</string>
    <string name="light">fonts/Light.otf</string>
    <string name="bold">fonts/extrabold.otf</string>
    <string name="staff">staff</string>
    <string name="check_in">CHECK IN</string>
    <string name="check_out">CHECK OUT</string>
    <string name="messenger">Messenger</string>
    <string name="telegram">Telegram</string>
    <string name="facebook">Facebook</string>
    <string name="zalo">Zalo</string>
    <string name="logo">logo</string>
    <string name="Enter_fullname">Nhập tên đầy đủ của bạn</string>
    <string name="staff_image">Staff Image</string>
    <string name="add_image">add image</string>
</resources>