<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/Edit_info"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/edit_pic_staff"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/staff_image"
        android:src="@drawable/add_person" />

    <EditText
        android:id="@+id/edit_first_last_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit_bg"
        android:hint="@string/First_last_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/edit_email_staff"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_bg"
        android:hint="@string/Email_staff"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/edit_phone_staff"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="phone"
        android:background="@drawable/edit_bg"
        android:hint="@string/phone_number_staff"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />


    <EditText
        android:id="@+id/edit_position"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="position"
        android:background="@drawable/edit_bg"
        android:hint="@string/Position"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/edit_part"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="part"
        android:background="@drawable/edit_bg"
        android:hint="@string/part"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />


    <Button
        android:id="@+id/updateStaffButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg"
        android:text="@string/Create_new" />

</LinearLayout>